--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.1.1",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
@@ -25,8 +26,10 @@
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
+    "i": "^0.3.7",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
+    "npm": "^10.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
